--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,4 @@ voluptuous>=0.8
 xlrd>=0.8
 beautifulsoup4>=4.4.0
 lxml>=3.4.0
-https://github.com/Widukind/pysdmx/tarball/master
-https://github.com/dr-leo/pandaSDMX/tarball/master
+requests-cache
